Implemented auth/logout endpoint
