# docs/swagger.json
@@ -18,7 +18,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.LoginRequest"
+                            "$ref": "#/definitions/handler.LoginRequest"
                         }
                     }
                 ],
@@ -26,19 +26,55 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/auth.LoginResponse"
+                            "$ref": "#/definitions/handler.LoginResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/auth.DefaultHttpError"
+                            "$ref": "#/definitions/handler.DefaultHttpError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/auth.DefaultHttpError"
+                            "$ref": "#/definitions/handler.DefaultHttpError"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/logout": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Logouts a user",
+                "parameters": [
+                    {
+                        "description": "Refresh token",
+                        "name": "logoutData",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.LogoutRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Logged out"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.DefaultHttpError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.DefaultHttpError"
                         }
                     }
                 }
@@ -49,15 +85,15 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Refresh a user",
+                "summary": "Refreshes access token",
                 "parameters": [
                     {
-                        "description": "Refresh information",
+                        "description": "Refresh token",
                         "name": "refreshData",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.RefreshRequest"
+                            "$ref": "#/definitions/handler.RefreshRequest"
                         }
                     }
                 ],
@@ -65,19 +101,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/auth.RefreshResponse"
+                            "$ref": "#/definitions/handler.RefreshResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/auth.DefaultHttpError"
+                            "$ref": "#/definitions/handler.DefaultHttpError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/auth.DefaultHttpError"
+                            "$ref": "#/definitions/handler.DefaultHttpError"
                         }
                     }
                 }
@@ -96,7 +132,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.RegisterRequest"
+                            "$ref": "#/definitions/handler.RegisterRequest"
                         }
                     }
                 ],
@@ -107,13 +143,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/auth.DefaultHttpError"
+                            "$ref": "#/definitions/handler.DefaultHttpError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/auth.DefaultHttpError"
+                            "$ref": "#/definitions/handler.DefaultHttpError"
                         }
                     }
                 }
@@ -121,7 +157,7 @@
         }
     },
     "definitions": {
-        "auth.DefaultHttpError": {
+        "handler.DefaultHttpError": {
             "type": "object",
             "properties": {
                 "message": {
@@ -129,7 +165,7 @@
                 }
             }
         },
-        "auth.LoginRequest": {
+        "handler.LoginRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -144,7 +180,7 @@
                 }
             }
         },
-        "auth.LoginResponse": {
+        "handler.LoginResponse": {
             "type": "object",
             "properties": {
                 "accessToken": {
@@ -155,7 +191,7 @@
                 }
             }
         },
-        "auth.RefreshRequest": {
+        "handler.LogoutRequest": {
             "type": "object",
             "properties": {
                 "refreshToken": {
@@ -163,7 +199,15 @@
                 }
             }
         },
-        "auth.RefreshResponse": {
+        "handler.RefreshRequest": {
+            "type": "object",
+            "properties": {
+                "refreshToken": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.RefreshResponse": {
             "type": "object",
             "properties": {
                 "accessToken": {
@@ -171,7 +215,7 @@
                 }
             }
         },
-        "auth.RegisterRequest": {
+        "handler.RegisterRequest": {
             "type": "object",
             "required": [
                 "email",
